@@ -20,8 +20,14 @@ import static org.junit.Assert.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 import android.content.Intent;
+import android.content.pm.PackageManager;
 import android.os.IBinder;
 
 import androidx.test.core.app.ApplicationProvider;
@@ -29,6 +35,7 @@ import androidx.test.core.app.ApplicationProvider;
 import com.android.adservices.data.enrollment.EnrollmentDao;
 import com.android.adservices.service.Flags;
 import com.android.adservices.service.FlagsFactory;
+import com.android.adservices.service.consent.AdServicesApiConsent;
 import com.android.adservices.service.consent.ConsentManager;
 import com.android.adservices.service.enrollment.EnrollmentData;
 import com.android.adservices.service.measurement.DeleteExpiredJobService;
@@ -38,6 +45,7 @@ import com.android.adservices.service.measurement.reporting.AggregateFallbackRep
 import com.android.adservices.service.measurement.reporting.AggregateReportingJobService;
 import com.android.adservices.service.measurement.reporting.EventFallbackReportingJobService;
 import com.android.adservices.service.measurement.reporting.EventReportingJobService;
+import com.android.compatibility.common.util.TestUtils;
 import com.android.dx.mockito.inline.extended.ExtendedMockito;
 
 import org.junit.Before;
@@ -47,7 +55,7 @@ import org.mockito.MockitoAnnotations;
 import org.mockito.MockitoSession;
 import org.mockito.quality.Strictness;
 
-import java.util.Arrays;
+import java.util.List;
 
 /** Unit test for {@link com.android.adservices.measurement.MeasurementService}. */
 public class MeasurementServiceTest {
@@ -61,11 +69,11 @@ public class MeasurementServiceTest {
                     .setEnrollmentId("E1")
                     .setCompanyId("1001")
                     .setSdkNames("sdk1")
-                    .setAttributionSourceRegistrationUrl(Arrays.asList("https://test.com/source"))
-                    .setAttributionTriggerRegistrationUrl(Arrays.asList("https://test.com/trigger"))
-                    .setAttributionReportingUrl(Arrays.asList("https://test.com"))
-                    .setRemarketingResponseBasedRegistrationUrl(Arrays.asList("https://test.com"))
-                    .setEncryptionKeyUrl(Arrays.asList("https://test.com/keys"))
+                    .setAttributionSourceRegistrationUrl(List.of("https://test.com/source"))
+                    .setAttributionTriggerRegistrationUrl(List.of("https://test.com/trigger"))
+                    .setAttributionReportingUrl(List.of("https://test.com"))
+                    .setRemarketingResponseBasedRegistrationUrl(List.of("https://test.com"))
+                    .setEncryptionKeyUrl(List.of("https://test.com/keys"))
                     .build();
 
     /** Setup for tests */
@@ -74,11 +82,73 @@ public class MeasurementServiceTest {
         MockitoAnnotations.initMocks(this);
     }
 
-    /** Test kill switch off */
+    /** Test kill switch off with consent given */
     @Test
-    public void testBindableMeasurementService_killSwitchOff() {
+    public void testBindableMeasurementService_killSwitchOff_consentGiven() throws Exception {
+        runWithMocks(
+                /* killSwitchOff */ false,
+                /* consentGiven */ true,
+                () -> {
+                    // Execute
+                    final IBinder binder = onCreateAndOnBindService();
+
+                    // Verification
+                    assertNotNull(binder);
+                    verify(mMockConsentManager, times(1)).getConsent(any());
+                    assertJobScheduled(/* timesCalled */ 1);
+                });
+    }
+
+    /** Test kill switch off with consent revoked */
+    @Test
+    public void testBindableMeasurementService_killSwitchOff_consentRevoked() throws Exception {
+        runWithMocks(
+                /* killSwitchOff */ false,
+                /* consentRevoked */ false,
+                () -> {
+                    // Execute
+                    final IBinder binder = onCreateAndOnBindService();
+
+                    // Verification
+                    assertNotNull(binder);
+                    verify(mMockConsentManager, times(1)).getConsent(any());
+                    assertJobScheduled(/* timesCalled */ 0);
+                });
+    }
+
+    /** Test kill switch on */
+    @Test
+    public void testBindableMeasurementService_killSwitchOn() throws Exception {
+        runWithMocks(
+                /* killSwitchOn */ true,
+                /* consentGiven */ true,
+                () -> {
+                    // Execute
+                    final IBinder binder = onCreateAndOnBindService();
+
+                    // Verification
+                    assertNull(binder);
+                    verify(mMockConsentManager, never()).getConsent(any());
+                    assertJobScheduled(/* timesCalled */ 0);
+                });
+    }
+
+    private Intent getIntentForMeasurementService() {
+        return new Intent(ApplicationProvider.getApplicationContext(), MeasurementService.class);
+    }
+
+    private IBinder onCreateAndOnBindService() {
+        MeasurementService spyMeasurementService = spy(new MeasurementService());
+        doReturn(mock(PackageManager.class)).when(spyMeasurementService).getPackageManager();
+        spyMeasurementService.onCreate();
+        return spyMeasurementService.onBind(getIntentForMeasurementService());
+    }
+
+    private void runWithMocks(
+            boolean killSwitchStatus, boolean consentStatus, TestUtils.RunnableWithThrow execute)
+            throws Exception {
         // Start a mockitoSession to mock static method
-        MockitoSession session =
+        final MockitoSession session =
                 ExtendedMockito.mockitoSession()
                         .spyStatic(AggregateReportingJobService.class)
                         .spyStatic(AggregateFallbackReportingJobService.class)
@@ -92,15 +162,17 @@ public class MeasurementServiceTest {
                         .spyStatic(MeasurementImpl.class)
                         .strictness(Strictness.LENIENT)
                         .startMocking();
-
         try {
-            // Kill Switch off
-            doReturn(false).when(mMockFlags).getMeasurementKillSwitch();
+            doReturn(killSwitchStatus).when(mMockFlags).getMeasurementKillSwitch();
 
             ExtendedMockito.doReturn(mMockFlags).when(FlagsFactory::getFlags);
 
             ExtendedMockito.doReturn(mMockConsentManager)
                     .when(() -> ConsentManager.getInstance(any()));
+
+            final AdServicesApiConsent mockConsent = mock(AdServicesApiConsent.class);
+            doReturn(consentStatus).when(mockConsent).isGiven();
+            doReturn(mockConsent).when(mMockConsentManager).getConsent(any());
 
             ExtendedMockito.doReturn(mMockEnrollmentDao)
                     .when(() -> EnrollmentDao.getInstance(any()));
@@ -113,60 +185,49 @@ public class MeasurementServiceTest {
 
             ExtendedMockito.doNothing()
                     .when(() -> AggregateReportingJobService.scheduleIfNeeded(any(), anyBoolean()));
-
             ExtendedMockito.doNothing()
                     .when(
                             () ->
                                     AggregateFallbackReportingJobService.scheduleIfNeeded(
                                             any(), anyBoolean()));
-
             ExtendedMockito.doNothing()
                     .when(() -> AttributionJobService.scheduleIfNeeded(any(), anyBoolean()));
 
             ExtendedMockito.doNothing()
                     .when(() -> EventReportingJobService.scheduleIfNeeded(any(), anyBoolean()));
-
             ExtendedMockito.doNothing()
                     .when(
                             () ->
                                     EventFallbackReportingJobService.scheduleIfNeeded(
                                             any(), anyBoolean()));
-
             ExtendedMockito.doNothing()
                     .when(() -> DeleteExpiredJobService.scheduleIfNeeded(any(), anyBoolean()));
 
-            MeasurementService measurementService = new MeasurementService();
-            measurementService.onCreate();
-            IBinder binder = measurementService.onBind(getIntentForMeasurementService());
-            assertNotNull(binder);
+            // Execute
+            execute.run();
         } finally {
             session.finishMocking();
         }
     }
 
-    /** Test kill switch on */
-    @Test
-    public void testBindableMeasurementService_killSwitchOn() {
-        // Start a mockitoSession to mock static method
-        MockitoSession session =
-                ExtendedMockito.mockitoSession().spyStatic(FlagsFactory.class).startMocking();
-
-        try {
-            // Kill Switch on
-            doReturn(true).when(mMockFlags).getMeasurementKillSwitch();
-
-            ExtendedMockito.doReturn(mMockFlags).when(FlagsFactory::getFlags);
-
-            MeasurementService measurementService = new MeasurementService();
-            measurementService.onCreate();
-            IBinder binder = measurementService.onBind(getIntentForMeasurementService());
-            assertNull(binder);
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    private Intent getIntentForMeasurementService() {
-        return new Intent(ApplicationProvider.getApplicationContext(), MeasurementService.class);
+    private void assertJobScheduled(int timesCalled) {
+        ExtendedMockito.verify(
+                () -> AggregateReportingJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
+        ExtendedMockito.verify(
+                () -> AggregateFallbackReportingJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
+        ExtendedMockito.verify(
+                () -> AttributionJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
+        ExtendedMockito.verify(
+                () -> EventReportingJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
+        ExtendedMockito.verify(
+                () -> EventFallbackReportingJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
+        ExtendedMockito.verify(
+                () -> DeleteExpiredJobService.scheduleIfNeeded(any(), anyBoolean()),
+                times(timesCalled));
     }
 }
